fix linkedin link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="social-media">
         <a href="http://twitter.com/anderfilth" target="_blank" rel="noopener" class="social-icon"><i class="fa fa-twitter"></i></a>
         <a href="http://github.com/anderfilth" target="_blank" rel="noopener" class="social-icon"><i class="fa fa-github-alt"></i></a>
-        <a href="https://www.linkedin.com/in/anderson-ribeiro-dos-santos-a53a1a4b" target="_blank" rel="noopener" class="social-icon"><i
+        <a href="https://www.linkedin.com/in/%F0%9F%92%BB-anderson-ribeiro-dos-santos-a53a1a4b" target="_blank" rel="noopener" class="social-icon"><i
             class="fa fa-linkedin"></i></a>
       </div>
     </footer>
