--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <article>
       <h2>Hi there! 😃</h2>
       <p>I've been working as Software Developer since 2010 and currently I'm
-      Software Engineer at Avanade from São Paulo/BR. I have been working with web technologies like PHP, Javascript, Node.js, React, cloud
+      Software Engineer at Ifood from São Paulo/BR. I have been working with web technologies like PHP, Javascript, Node.js, React, cloud
       computing, web architecture and several other tools to make it work.</p>
     </article>
     <footer>
